--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="sections">
             <div class="main-image-container">
-              <img src="images/main-image.jpg" alt="Main Image">
+              <img src="images/main-image.jpg" alt="Main Image" class="main-image">
             </div>
             <div class="row-2-3">
               <div class="section2">
