--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
   <head>
-    <title>UrbaNature</title>
+    <title>UrbaNature - Acasă</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
@@ -55,7 +55,7 @@
           </div>
           <div class="sections">
             <div class="main-image-container">
-              <img src="images/main-image.jpg" alt="Main Image" class="main-image">
+              <img src="images/main-image.jpg" alt="Main Image">
             </div>
             <div class="row-2-3">
               <div class="section2">
