--- a/portofoliu.html
+++ b/portofoliu.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ro">
   <head>
-    <title>Portofoliu</title>
+    <title>Portofoliu - Portofoliu</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
