--- a/servicii.html
+++ b/servicii.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ro">
   <head>
-    <title>Servicii</title>
+    <title>UrbaNature - Servicii</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/servicii.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -15,16 +15,90 @@
       <div class="game-logo">
         <a href="#"><img class="cs2-logo" src="images/512x512.png" alt="Logo"></a>
       </div>
-      <nav>
+      <nav class="nav-links" id="navLinks">
         <a class="category" href="index.html">Acasă</a>
         <a class="category" href="despre-noi.html">Despre noi</a>
         <a class="category" href="portofoliu.html">Portofoliu</a>
         <a class="category" href="servicii.html">Servicii</a>
         <a class="category" href="contact.html">Contact</a>
       </nav>
+      <div class="menu-wrapper">
+          <button id="btnMenu" class="menu-btn">MENU ☰</button>
+      </div>
     </header>
       <main>
-
+        <div class="services-wrapper">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1>Design Peisagistic & Planuri 3D</h1>
+              <p>Proiectăm grădini și spații verzi în funcție de stilul arhitectural al locuinței și preferințele proprietarului.<br>
+              Folosim randări 3D pentru a vizualiza rezultatul final înainte de execuție.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services-reversed">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1>Însămânțare și montare gazon rulou</h1>
+              <p>Executăm pregătirea completă a terenului: nivelare, afânare, corectarea pH-ului, aplicare strat de sol fertil și montaj de gazon rulou premium.<br>
+              Lucrăm doar cu soiuri certificate, adaptate climatului din Brașov (Festuca arundinacea, Lolium perenne etc.)..</p>
+            </div>
+          </div>
+        </div>
+        <div class="services-wrapper">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1>Sisteme de irigații automatizate</h1>
+              <p>Proiectăm și montăm sisteme eficiente, cu aspersoare Hunter / Rain Bird, senzori de umiditate și control Wi-Fi.<br>
+              Reducerea consumului de apă cu până la 40% prin distribuție uniformă și programare inteligentă.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services-reversed">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1>Plantări ornamentale și horticole</h1>
+              <p>Realizăm plantări sezoniere de arbori, arbuști și flori decorative, adaptate microclimatului local.<br>
+              Oferim consultanță pentru alegerea speciilor și garanție pentru prinderea plantelor.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services-wrapper">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1>Mentenanță și abonamente</h1>
+              <p>Întreținere periodică a spațiilor verzi: tunderi regulate, fertilizări, tratamente fitosanitare, curățare frunze și igienizare de sezon.<br>
+              Abonamente lunare / sezoniere pentru persoane fizice și juridice.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services-reversed">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1>Zone outdoor pentru socializare</h1>
+              <p>Amenajăm spații funcționale pentru relaxare: zone cu foc de tabără, pergole, bănci, alei pavate și iluminat ambiental.<br>
+              Perfecte pentru proprietăți private, pensiuni și cabane din zona Brașovului.</p>
+            </div>
+          </div>
+        </div>
       </main>
       <aside>
         
@@ -33,5 +107,6 @@
         
       </footer>
     </section>
+    <script src="js/index.js"></script> 
   </body>
 </html>
