--- a/servicii.html
+++ b/servicii.html
@@ -33,7 +33,7 @@
           </div>
           <div class="services-info">
             <div class="text-wrapper">
-              <h1>Design Peisagistic & Planuri 3D</h1>
+              <h1 id="peisagistic-design">Design Peisagistic & Planuri 3D</h1>
               <p>Proiectăm grădini și spații verzi în funcție de stilul arhitectural al locuinței și preferințele proprietarului.<br>
               Folosim randări 3D pentru a vizualiza rezultatul final înainte de execuție.</p>
             </div>
@@ -41,11 +41,11 @@
         </div>
         <div class="services-reversed">
           <div class="services-images-container">
-            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+            <img src="https://picsum.photos/800/600" alt="Însămânțare și montare gazon rulou">
           </div>
           <div class="services-info">
             <div class="text-wrapper">
-              <h1>Însămânțare și montare gazon rulou</h1>
+              <h1 id="lawn-installation">Însămânțare și montare gazon rulou</h1>
               <p>Executăm pregătirea completă a terenului: nivelare, afânare, corectarea pH-ului, aplicare strat de sol fertil și montaj de gazon rulou premium.<br>
               Lucrăm doar cu soiuri certificate, adaptate climatului din Brașov (Festuca arundinacea, Lolium perenne etc.)..</p>
             </div>
@@ -53,11 +53,11 @@
         </div>
         <div class="services-wrapper">
           <div class="services-images-container">
-            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+            <img src="https://picsum.photos/800/600" alt="Sisteme de irigații automatizate">
           </div>
           <div class="services-info">
             <div class="text-wrapper">
-              <h1>Sisteme de irigații automatizate</h1>
+              <h1 id="irigation-system">Sisteme de irigații automatizate</h1>
               <p>Proiectăm și montăm sisteme eficiente, cu aspersoare Hunter / Rain Bird, senzori de umiditate și control Wi-Fi.<br>
               Reducerea consumului de apă cu până la 40% prin distribuție uniformă și programare inteligentă.</p>
             </div>
@@ -65,35 +65,47 @@
         </div>
         <div class="services-reversed">
           <div class="services-images-container">
-            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+            <img src="https://picsum.photos/800/600" alt="Sisteme de irigații automatizate">
           </div>
           <div class="services-info">
             <div class="text-wrapper">
-              <h1>Plantări ornamentale și horticole</h1>
-              <p>Realizăm plantări sezoniere de arbori, arbuști și flori decorative, adaptate microclimatului local.<br>
-              Oferim consultanță pentru alegerea speciilor și garanție pentru prinderea plantelor.</p>
+              <h1 id="trees-shrubs">Toaletare pomi și arbori</h1>
+              <p>Servicii sigure de tăiere de întreținere, formare sau regenerare pentru pomi fructiferi și arbori ornamentali.<br>
+              Lucrăm cu echipament profesional de alpinism utilitar și respectăm normele de protecție a plantelor.</p>
             </div>
           </div>
         </div>
         <div class="services-wrapper">
           <div class="services-images-container">
-            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+            <img src="https://picsum.photos/800/600" alt="Plantări ornamentale și horticole">
           </div>
           <div class="services-info">
             <div class="text-wrapper">
-              <h1>Mentenanță și abonamente</h1>
-              <p>Întreținere periodică a spațiilor verzi: tunderi regulate, fertilizări, tratamente fitosanitare, curățare frunze și igienizare de sezon.<br>
-              Abonamente lunare / sezoniere pentru persoane fizice și juridice.</p>
+              <h1 id="horticultural-planting">Plantări ornamentale și horticole</h1>
+              <p>Realizăm plantări sezoniere de arbori, arbuști și flori decorative, adaptate microclimatului local.<br>
+              Oferim consultanță pentru alegerea speciilor și garanție pentru prinderea plantelor.</p>
             </div>
           </div>
         </div>
         <div class="services-reversed">
           <div class="services-images-container">
-            <img src="https://picsum.photos/800/600" alt="Design Peisagistic & Planuri 3D">
+            <img src="https://picsum.photos/800/600" alt="Mentenanță și abonamente">
           </div>
           <div class="services-info">
             <div class="text-wrapper">
-              <h1>Zone outdoor pentru socializare</h1>
+              <h1 id="subscriptions">Mentenanță și abonamente</h1>
+              <p>Întreținere periodică a spațiilor verzi: tunderi regulate, fertilizări, tratamente fitosanitare, curățare frunze și igienizare de sezon.<br>
+              Abonamente lunare / sezoniere pentru persoane fizice și juridice.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services-wrapper">
+          <div class="services-images-container">
+            <img src="https://picsum.photos/800/600" alt="Zone outdoor pentru socializare">
+          </div>
+          <div class="services-info">
+            <div class="text-wrapper">
+              <h1 id="outdoor">Zone outdoor pentru socializare</h1>
               <p>Amenajăm spații funcționale pentru relaxare: zone cu foc de tabără, pergole, bănci, alei pavate și iluminat ambiental.<br>
               Perfecte pentru proprietăți private, pensiuni și cabane din zona Brașovului.</p>
             </div>
