--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
         <section class="services">
             <div class="services-div">
               <h3>Design peisagistic & planuri 3D</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#peisagistic-design"><button class="btn-services">Mai mult</button></a>
             </div>
             <div class="services-div">
               <h3>Însămânțare și montare gazon rulou</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#lawn-installation"><button class="btn-services">Mai mult</button></a>
             </div>
             <div class="services-div">
               <h3>Sisteme de irigații automatizate</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#irigation-system"><button class="btn-services">Mai mult</button></a>
             </div>
             <div class="services-div">
               <h3>Toaletare pomi și arbori</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#trees-shrubs"><button class="btn-services">Mai mult</button></a>
             </div>
             <div class="services-div">
               <h3>Plantări ornamentale și horticole</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#horticultural-planting"><button class="btn-services">Mai mult</button></a>
             </div>
             <div class="services-div">
               <h3>Mentenanță periodică (abonamente)</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#subscriptions"><button class="btn-services">Mai mult</button></a>
             </div>
             <div class="services-div">
               <h3>Amenajare zone outdoor de socializare (foc de tabără, pergole, mobilier etc.)</h3>
-              <button class="btn-services">Mai mult</button>
+              <a href="servicii.html#outdoor"><button class="btn-services">Mai mult</button></a>
             </div>
           </section>
       </main>
