--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <section class="wrapper">
     <header>
-      <div class="logo">
-        <a href="#"><img class="unlogo" src="images/ChatGPT_Image_Oct_16_2025_10_48_08_PM.png" alt="UrbanNature Logo"></a>
+      <div class="logo-container">
+        <a href="index.html"><img class="unlogo" src="images/3ec8032e-56a0-406c-b3c9-cce6c0a222fd_removalai_preview.png" alt="UrbanNature Logo"></a>
       </div>
       <nav class="nav-links" id="navLinks">
         <a class="category" href="index.html">Acasă</a>
