--- a/servicii.html
+++ b/servicii.html
@@ -37,6 +37,9 @@
               <p>Proiectăm grădini și spații verzi în funcție de stilul arhitectural al locuinței și preferințele proprietarului.<br>
               Folosim randări 3D pentru a vizualiza rezultatul final înainte de execuție.</p>
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
         <div class="services-reversed">
@@ -49,6 +52,9 @@
               <p>Executăm pregătirea completă a terenului: nivelare, afânare, corectarea pH-ului, aplicare strat de sol fertil și montaj de gazon rulou premium.<br>
               Lucrăm doar cu soiuri certificate, adaptate climatului din Brașov (Festuca arundinacea, Lolium perenne etc.)..</p>
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
         <div class="services-wrapper">
@@ -60,7 +66,11 @@
               <h1 id="irigation-system">Sisteme de irigații automatizate</h1>
               <p>Proiectăm și montăm sisteme eficiente, cu aspersoare Hunter / Rain Bird, senzori de umiditate și control Wi-Fi.<br>
               Reducerea consumului de apă cu până la 40% prin distribuție uniformă și programare inteligentă.</p>
+              
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
         <div class="services-reversed">
@@ -73,6 +83,9 @@
               <p>Servicii sigure de tăiere de întreținere, formare sau regenerare pentru pomi fructiferi și arbori ornamentali.<br>
               Lucrăm cu echipament profesional de alpinism utilitar și respectăm normele de protecție a plantelor.</p>
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
         <div class="services-wrapper">
@@ -85,6 +98,9 @@
               <p>Realizăm plantări sezoniere de arbori, arbuști și flori decorative, adaptate microclimatului local.<br>
               Oferim consultanță pentru alegerea speciilor și garanție pentru prinderea plantelor.</p>
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
         <div class="services-reversed">
@@ -97,6 +113,9 @@
               <p>Întreținere periodică a spațiilor verzi: tunderi regulate, fertilizări, tratamente fitosanitare, curățare frunze și igienizare de sezon.<br>
               Abonamente lunare / sezoniere pentru persoane fizice și juridice.</p>
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
         <div class="services-wrapper">
@@ -109,6 +128,9 @@
               <p>Amenajăm spații funcționale pentru relaxare: zone cu foc de tabără, pergole, bănci, alei pavate și iluminat ambiental.<br>
               Perfecte pentru proprietăți private, pensiuni și cabane din zona Brașovului.</p>
             </div>
+            <a href="https://egtl.ro/ro" class="btn-offer-container">
+              <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
+            </a>
           </div>
         </div>
       </main>
