--- a/servicii.html
+++ b/servicii.html
@@ -13,7 +13,7 @@
     <section class="wrapper">
     <header>
       <div class="logo-container">
-        <a href="index.html"><img class="unlogo" src="images/3ec8032e-56a0-406c-b3c9-cce6c0a222fd_removalai_preview.png" alt="UrbanNature Logo"></a>
+        <a href="index.html"><img class="unlogo" src="images/logo.png" alt="UrbanNature Logo"></a>
       </div>
       <nav class="nav-links" id="navLinks">
         <a class="category" href="index.html">Acasă</a>
