--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="main-page-wrapper">
           <div class="section1">
             <h1>Amenajări complete de spații verzi în Brașov — de la design la întreținere</h1>
-            <p>UrbanNature oferă soluții one-stop premium pentru grădini rezidențiale, spații publice și curți private: design peisagistic, montare gazon, irigații, toaletare arbori și mentenanță profesională.</p>
+            <p>UrbaNature oferă soluții one-stop premium pentru grădini rezidențiale, spații publice și curți private: design peisagistic, montare gazon, irigații, toaletare arbori și mentenanță profesională.</p>
             <a href="https://egtl.ro/ro" class="btn-offer-container">
               <button class="btn-offer" target="_blank" src="https://egtl.ro/ro">Solicită ofertă</button>
             </a>
@@ -60,7 +60,7 @@
             <div class="row-2-3">
               <div class="section2">
                 <h1>Cine suntem?</h1>
-                <p>UrbanNature este o firmă specializată în amenajări și întreținere spații verzi în județul Brașov.
+                <p>UrbaNature este o firmă specializată în amenajări și întreținere spații verzi în județul Brașov.
                 Lucrăm cu pasiune, precizie și grijă pentru detalii, oferind servicii complete — de la proiectare 3D și selecția plantelor până la montajul sistemelor de irigații și întreținerea periodică a grădinii.
                 Ne adresăm celor care apreciază calitatea, eleganța și armonia naturală.
                 </p>
